# silvanus

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md  requirements.txt
examples/: app.py  http.py  main.py  routing.py
plastic/: __init__.py
plastic/enums/: http.py  separators.py
plastic/routing/: node.py  router.py
silvanus/enums/: separators.py
silvanus/integration/duck/: filters.py
silvanus/integration/http/: __init__.py  base.py
silvanus/routing/: __init__.py  node.py  router.py  simple.py
silvanus/strategy/routers/: __init__.py  all.py  base.py  first.py
silvanus/structures/: __init__.py  base.py
tests/: http.py  node.py  pytest.ini  readme.py  router.py  simple.py  test_http.py  test_simple.py
