[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "silvanus"
version = "0.0.0a2"
description = "A simple library for URL routing with a tree-like prefix structure"
license = "MIT"
authors = ["Alexandr Bortnik <sambonsttt@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Sethis/silvanus"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Sethis/silvanus/issues"
